# PersonalFinance

./: .gitignore  README.md  pyproject.toml  stdout
transaction_services/config/: config_reader.py  db_constants.py  example_config.yaml
transaction_services/statement_file_processing/: statement_file_processors.py
transaction_services/statement_file_processing/lib/: __init__.py  abn_statement_processing.py  base_statement_processor.py  bunq_statement_processing.py  ics_credit_statement_processing.py
transaction_services/ui/: finance_dashboard.py
transaction_services/ui/views/: __init__.py  analysis_views.py  base_views.py  cash_category_linking.py  direct_debit_linking.py  loan_linking.py  loan_managment.py  manual_transaction_management.py
