[project]
name = "personal_finance"
version = "0.1.0"
description = "Expense management"
authors = [
    { name = "SamuelMosesA", email = "asamuelmoses@outlook.com" }
]
dependencies = [
    "abn-amro-statement-parser @ git+https://github.com/denilsonsa/abn-amro-statement-parser.git",
    "psycopg2>=2.9.9",
    "psycopg2-binary>=2.9.9",
    "polars>=1.9.0",
    "streamlit>=1.39.0",
    "sqlalchemy>=2.0.35",
    "plotly>=5.24.1",
    "streamlit-aggrid>=1.0.5",
    "pyyaml>=6.0.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["transaction_services"]

[project.scripts]
statement-file-import-service = 'transaction_services.statement_file_processing.statement_file_processors:main'


[tool.rye.scripts]
finance-dashboard = ["streamlit", "run", "transaction_services/ui/finance_dashboard.py"]
